--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@
 
 @font-face {
     font-family: 'Montserrat Alternates';
-    src: url('fonts/MontserratAlternates-Italic.ttf') format('truetype');
-    font-style: italic;
+    src: url('fonts/MontserratAlternates-Italic.ttf')
 }
 header {
     display: flex;
