--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ h1{
     z-index: 1; /* Устанавливаем положительный z-index, чтобы элемент был видимым */
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 720px) {
     .priglash{
         width: 60vw;
     }
@@ -168,7 +168,7 @@ h1{
 .phon_2{
     position: absolute;
     width: 100%;
-    top: 180vw;
+    top: 110vw;
     left: 0;
     z-index: -1;
 }
@@ -176,7 +176,7 @@ h1{
 .phon_3{
     position: absolute;
     width: 100%;
-    top: 220vw;
+    top: 140vw;
     left: 0;
     z-index: -1;
 }
@@ -210,7 +210,14 @@ h1{
     left: 0;
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 720px) {
+    .phon_2{
+        top: 180vw;
+    }
+    .phon_3{
+        top: 220vw
+    }
+    
     .q1{
         width: 200px;
         top: 100vw;
@@ -259,7 +266,7 @@ h1{
     color: #ffffff;
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 720px) {
     .countdown {
         width: 100%;
         justify-content: center;
@@ -306,7 +313,7 @@ h1{
 
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 720px) {
     .text {
         font-size: 2vh;
     }
