--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ h1{
     font-size: 96px; /* Размер шрифта */
     text-align: center; /* Центрируем текст */
     z-index: 1; /* Убедитесь, что текст выше изображения */
-    top: 0vw; /* Сдвигаем текст вниз на 50% от высоты контейнера */
+    top: 40%; /* Сдвигаем текст вниз на 50% от высоты контейнера */
     left: 50%; /* Сдвигаем текст вправо на 50% от ширины контейнера */
     transform: translate(-50%, -50%); /* Сдвигаем текст обратно на 50% по ширине и высоте */
     white-space: nowrap; /* Запрещаем перенос текста */
@@ -154,6 +154,7 @@ h1{
     .imena, .zagolovok {
         font-size:32px;
         margin-top: 80px;
+        top: 0;
     }
 }
 
